--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "devDependencies": {
     "tailwindcss": "^3.4.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
+  },
+  "scripts": {
+    "build": "node build.js"
   }
 }
